# ABY

./: ABY-review.md
src/abycore/ABY_utils/: ABYconstants.h
src/abycore/circuit/: booleancircuits.h
src/abycore/sharing/: yaoserversharing.h
src/examples/: CMakeLists.txt
src/examples/bench_operations/: bench_operations.cpp
src/examples/dtree/: CMakeLists.txt  K.txt  KGen.cpp  README.md  test.cpp
src/examples/dtree/ExperimentDataRead/: datawash.cpp  datawash.h  destination.txt  main.cpp  read  read.cpp  read.h
src/examples/dtree/common/: LowMC.cpp  LowMC.h  aes_circuit.cpp  aes_circuit.h  common.cpp  common.h  dtread.cpp  dtread.h  feature_encrypt.cpp  feature_encrypt.h  fss_com.cpp  fss_com.h  fss_or_ot.cpp  fss_or_ot.h  ftread.cpp  ftread.h  pAES.cpp  pAES.h  test_oblivious_read.cpp  test_oblivious_read.h  tree_encrypt.cpp  tree_encrypt.h  tree_feature.cpp  tree_feature.h  tree_read_from_file.cpp  tree_read_from_file.h
src/examples/dtree/common/common_src/: config.h  secret_sharing.cc  secret_sharing.h  types.cc  types.h  utils.cc  utils.h
src/examples/dtree/common/crypto_party/: crypto_party.h  paillier.cpp  paillier_party.cpp  paillier_party.h
src/examples/dtree/fss/: FSSEvaluationTime.txt  ZeroOrOne0.txt  ZeroOrOne1.txt  fss-common.h  fss-server.cpp  fss-test  fss-test.cpp
src/examples/dtree/fss-test/: ClientParam.csv  ClientParam.txt  EvaluationResult1.txt  EvaluationResult2.txt  FSSKeyGenTime.txt  Key0.csv  Key0.txt  Key1.csv  Key1.txt  Key2.txt  ZeroOrOne1.txt  ZeroOrOne2.txt  fss-client.cpp  fss-server.cpp  fss-server.h  fss-test  fss-test.cpp
src/examples/elementary_test/: CMakeLists.txt  elementary_test.cpp
src/examples/lowmc/: CMakeLists.txt  lowmc.cpp  lowmc_nonmpc.cpp
(+20 files in other folders)
